--- a/VenteApp/Resources/Localization/Strings.resx
+++ b/VenteApp/Resources/Localization/Strings.resx
@@ -537,16 +537,19 @@
   <data name="WelcomeTitle" xml:space="preserve">
     <value>Bienvenue</value>
   </data>
-  <data name="DownloadPdfButton2" xml:space="preserve">
-    <value />
-  </data>
-  <data name="Key" xml:space="preserve">
-    <value />
-  </data>
   <data name="ProviderPickerLabel" xml:space="preserve">
     <value>Fournisseurs</value>
   </data>
   <data name="ProviderDetailsTitle" xml:space="preserve">
     <value> Informations sur le fournisseur</value>
+  </data>
+  <data name="CreditCard" xml:space="preserve">
+    <value>par carte bancaire</value>
+  </data>
+  <data name="Cash" xml:space="preserve">
+    <value>en espèces</value>
+  </data>
+  <data name="PaymentModePickerTitle" xml:space="preserve">
+    <value>Sélectionnez le mode de paiement</value>
   </data>
 </root>
